fix: [Diego] Carrinho retorna valor total
